@@ -7,6 +7,9 @@ http://youtu.be/kHikGIWrvCs
 oEmbed official documentation:
 http://http://oembed.com/
 
+You have to know this addon try to go beyond already supported website
+and with as many providers as possible without third party services.
+
 oembed provider
 ===============
 
