@@ -6,6 +6,7 @@ Changelog
 
 - Add "proxy-oembed-provider" to make your Plone an oembed proxy consumer and provider
 - Add twitteruser (api2embed) and activate api2embed everywhere
+- Improve local oembed support for archetypes using primary field
 
 1.2.3 (2012-08-24)
 ------------------
